# virk-client

./: .env.example  .gitignore  main.py  pyproject.toml
src/: __init__.py  virk_client.py
tests/: conftest.py  test_virk_client.py
